tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_stricter_than_trait_different_trait/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: impl has stricter requirements than trait
   ┌─ src/main.nr:11:12
   │
11 │         fn bar<U>() where Option2<T>: Default2;
   │            --- definition of `bar` from trait
   ·
17 │         fn bar<B>() where Option2<A>: OtherDefault {}
   │                                       ------------ impl has extra requirement `Option2<A>: OtherDefault`
   │

Aborting due to 1 previous error
